updated html code

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
           </div>
           <div class="form-group">
             <label for="studentId">Student ID (YYYY-NNNN) *</label>
-            <input type="text" id="studentId" name="studentId" placeholder="e.g., 2025-0001" required />
+            <input pattern="\d{4}-\d{4}" type="text" id="studentId" name="studentId" placeholder="e.g., 2025-0001" required />
           </div>
         </div>
 
